pom: depend on brooklyn-upstream-parent